Fixed navbar z-index issues

--- a/src/components/ui/navbar.css
+++ b/src/components/ui/navbar.css
@@ -11,6 +11,7 @@
     height: 40px;
     margin-left: 0.2rem;
     cursor: pointer;
+    z-index: 2;
     /* pointer-events: none; */
 }
 
@@ -20,11 +21,13 @@
     width: 357px !important;
     position: fixed;
     left: 0;
+    z-index: 1;
 }
 
 .navbar-sigil-wrapper{
     margin-right: 0.24em;
     /* padding: 2px; */
+    z-index: 2;
 }
 
 .navbar-sigil{
